Update jupyter notebook

--- a/notebooks/slides.ipynb
+++ b/notebooks/slides.ipynb
@@ -210,7 +210,8 @@
    "outputs": [],
    "source": [
     "from sqlalchemy.dialects import sqlite\n",
-    "print(str(query.statement.compile(dialect=sqlite.dialect())))"
+    "print(str(query.statement.compile(dialect=sqlite.dialect()))\n",
+    "      .replace('GROUP BY', '\\nGROUP BY'))"
    ]
   },
   {
@@ -336,9 +337,10 @@
     "split_review = \\\n",
     "    'as.integer(sapply(strsplit(reviewhelpful, \"/\"), \"[\", %i))'\n",
     "\n",
-    "p = (gg.ggplot((res.collect().\n",
-    "                mutate(r1 = split_review % 1,\n",
-    "                       r2 = split_review % 2))) +\n",
+    "p = (gg.ggplot((res\n",
+    "                .collect()\n",
+    "                .mutate(r1 = split_review % 1,\n",
+    "                        r2 = split_review % 2))) +\n",
     "     gg.aes_string(x='r1+1', y='r2+1', size='n') +\n",
     "     gg.geom_point(alpha = 0.5) +\n",
     "     gg.scale_x_log10(\"review voted helpful\") +\n",
@@ -397,6 +399,7 @@
    "source": [
     "from bokeh.plotting import figure\n",
     "from bokeh.plotting import figure, show, output_notebook\n",
+    "##from bokeh.resources import INLINE\n",
     "output_notebook()\n",
     "\n",
     "plot = figure()\n",
@@ -673,7 +676,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## --- SQL ---\n",
+    "sql = \"SELECT * FROM review WHERE reviewscore < 2\"\n",
+    "lowscore = sqlcontext.sql(sql)\n",
+    "## --- Spark ---\n",
+    "names = (lowscore\n",
+    "         .rdd\n",
+    "         .flatMap(bigrams)\n",
+    "         .map(lambda x: (x[1], x[2]))\n",
+    "         .reduceByKey(lambda a,b: a+b))\n",
     "lst = names.takeOrdered(20, key = lambda x: -x[1])\n",
+    "## --- R (from Python) ---\n",
     "from rpy2.robjects.vectors import StrVector, IntVector\n",
     "dataf = dplyr.DataFrame({'word_pair': StrVector([x[0] for x in lst]),\n",
     "                         'count': IntVector([x[1] for x in lst])})\n",
@@ -685,61 +698,10 @@
     "     gg.theme(**{'axis.text.x': gg.element_text(angle = 90, hjust = 1)}))\n",
     "\n",
     "with grdevices.render_to_bytesio(grdevices.png, \n",
-    "                                 width=800,\n",
-    "                                 height=600, \n",
+    "                                 width=800, height=600, \n",
     "                                 res=120) as b:\n",
     "    p.plot()\n",
     "display(Image(data=b.getvalue(), format='png', embed=True))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_ngram_func(n):\n",
-    "    def uniq_ngrams(p):\n",
-    "        key = p.reviewerid\n",
-    "        tokens = tuple(x.lower() \\\n",
-    "                       for x in p.reviewsummary.split() \\\n",
-    "                       if x not in bad_tokens)\n",
-    "        s = set(' '.join(tokens[j] for j in range(i, i+n)) \\\n",
-    "                for i in range(len(tokens)-(n+1)))\n",
-    "        return ((key, k, 1) for k in s)\n",
-    "    return uniq_ngrams\n",
-    "bigrams = make_ngram_func(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "from rpy2.robjects.vectors import StrVector, IntVector\n",
-    "names = (review\n",
-    "         .rdd\n",
-    "         .flatMap(bigrams)\n",
-    "         .map(lambda x: ((x[0], x[1]), x[2]))\n",
-    "         .reduceByKey(lambda a,b: a+b) )\n",
-    "lst = names.takeOrdered(20, key = lambda x: -x[1])\n",
-    "dataf = dplyr.DataFrame({'ngram': StrVector([x[0][1] for x in lst]),\n",
-    "                         'reviewer': StrVector([x[0][0] for x in lst]),\n",
-    "                         'count': IntVector([x[1] for x in lst])})\n",
-    "p = (gg.ggplot(dataf) +\n",
-    "     gg.geom_bar(gg.aes_string(x='reorder(ngram, as.integer(reviewer))',\n",
-    "                               y='count', fill='reviewer'),\n",
-    "                 stat=\"identity\") +\n",
-    "     gg.scale_x_discrete('ngram') +\n",
-    "     gg.theme(**{'axis.text.x': gg.element_text(angle = 90, hjust = 1)}))\n",
-    "\n",
-    "with grdevices.render_to_bytesio(grdevices.png, \n",
-    "                                 width=800,\n",
-    "                                 height=600, \n",
-    "                                 res=120) as b:\n",
-    "    p.plot()\n",
-    "display(Image(data=b.getvalue(), format='png', embed=True))\n",
-    "```"
    ]
   }
  ],
